# yewprint-playground

./: .gitignore  Cargo.toml  README.md  netlify.toml
.github/workflows/: pr.yml
src/: app.rs  forms.rs  lib.rs  main.rs  nav_menu.rs  page.rs  test.rs
static/: app.css  index.html
xtask/: Cargo.toml
xtask/src/: main.rs
yewprint-playground/: Cargo.toml  netlify.toml
yewprint-playground/src/: app.rs  main.rs  nav_menu.rs
yewprint-playground/static/: blueprint.css  index.html
