[package]
name = "yewprint-playground"
version = "0.1.0"
authors = ["yozhgoor <yozhgoor@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
web-sys = "0.3"
yew = { git = "https://github.com/yewstack/yew.git", rev = "1507c21b" }
yewprint = { git = "https://github.com/cecton/yewprint.git", branch = "main" }
yew-router = { git = "https://github.com/yewstack/yew.git", rev = "1507c21b" }

[features]
default = [ "wasm-run/binaryen" ]
prebuilt-wasm-opt = [ "wasm-run/prebuilt-wasm-opt" ]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasm-run = { version = "0.6.1", default-features = false, features = [ "serve" ] }
structopt = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
